# python-project

./: .gitignore  main.py  pyproject.toml
data/boards/: board1.csv  board2.csv  board3.csv
docs/Assignment/: Link Take Home Assignment.MD
src/: board_config.py  board_square.py  chute.py  game.py  game_board.py  game_board_item.py  game_dice.py  ladder.py  player.py  player_winner.py  rollable.py
src/dice/: four_sided_die.py  six_sided_die.py
src/exceptions/: draw_game.py  misconfigure.py
tests/: test_board.py  test_board_config.py  test_chute.py  test_four_sided_die.py  test_game.py  test_game_dice.py  test_ladder.py  test_player.py  test_six_sided_die.py  test_square.py
