[tool.poetry]
name = "chutes-and-ladders"
version = "0.1.0"
description = "A Chutes and Ladders game"
authors = ["Marcus Hightower <marcus.hightower@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chutes_and_ladders"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
